Styling of cards and searchbar. Added that search terms are kept visible after searching

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -25,8 +25,9 @@
                 "ms-python.python",
                 "ms-python.debugpy",
                 "batisteo.vscode-django",
-                // Formatting Extensions
-                "esbenp.prettier-vscode"
+                "esbenp.prettier-vscode",
+                "mtxr.sqltools-driver-sqlite",
+                "mechatroner.rainbow-csv"
             ]
         }
     },
