--- a/.devcontainer/requirements.txt
+++ b/.devcontainer/requirements.txt
@@ -1,4 +1,14 @@
-Django
-Pillow
-requests
-spotipy
+asgiref==3.8.1
+certifi==2024.6.2
+charset-normalizer==3.3.2
+Django==5.0.6
+django-crispy-forms==2.1
+idna==3.7
+pillow==10.3.0
+redis==5.0.4
+requests==2.32.3
+setuptools==69.5.1
+spotipy==2.24.0
+sqlparse==0.5.0
+urllib3==2.2.1
+wheel==0.43.0
