--- a/.devcontainer/requirements.txt
+++ b/.devcontainer/requirements.txt
@@ -3,6 +3,7 @@ certifi==2024.6.2
 charset-normalizer==3.3.2
 Django==5.0.6
 django-crispy-forms==2.1
+crispy-bootstrap5==2024.2
 idna==3.7
 pillow==10.3.0
 redis==5.0.4
