--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -26,7 +26,10 @@
                 "ms-python.debugpy",
                 "batisteo.vscode-django",
                 // Formatting Extensions
-                "esbenp.prettier-vscode"
+                "esbenp.prettier-vscode",
+                "mechatroner.rainbow-csv",
+                // Database Extensions
+                "qwtel.sqlite-viewer"
             ]
         }
     },
