--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,16 +1,16 @@
 {
-    "name": "${localEnv:PROJECT_A_NAME:my_project_name}",
+    "name": "${localEnv:PROJECT_A_NAME:reviewSite}",
     "build": {
         "dockerfile": "Dockerfile",
         "args": {
-            "ENV_NAME": "${localEnv:PROJECT_A_NAME:my_project_name}",
+            "ENV_NAME": "${localEnv:PROJECT_A_NAME:reviewSite}",
             "PYTHON_VER": "${localEnv:PYTHON_VER:3.12}"
         }
     },
     "customizations": {
         "settings": {
-            "python.defaultInterpreterPath": "/opt/conda/envs/${localEnv:PROJECT_A_NAME:my_project_name}/bin/python3",
-            "python.selectInterpreter": "/opt/conda/envs/${localEnv:PROJECT_A_NAME:my_project_name}/bin/python3"
+            "python.defaultInterpreterPath": "/opt/conda/envs/${localEnv:PROJECT_A_NAME:reviewSite}/bin/python3",
+            "python.selectInterpreter": "/opt/conda/envs/${localEnv:PROJECT_A_NAME:reviewSite}/bin/python3"
         },
         "vscode": {
             "extensions": [
