--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,23 +1,16 @@
-# Arguments
-ARG PYTHON_VER="3.13"
-FROM python:$PYTHON_VER
+FROM mcr.microsoft.com/devcontainers/miniconda:1-3
 
-# Arguments
-ARG PYTHON_VER="3.13"
-ARG QUARTO_VER="1.4.554"
-ARG ENV_NAME="my_project"
-# Environment variables
-ENV ENV_NAME=$ENV_NAME
-ENV PYTHON_VER=$PYTHON_VER
-ENV QUARTO_VER=$QUARTO_VER
+# Copy environment.yml (if found) to a temp location so we update the environment. Also
+# copy "noop.txt" so the COPY instruction does not fail if no environment.yml exists.
+COPY .devcontainer/environment.yml* /tmp/conda-tmp/
+RUN if [ -f "/tmp/conda-tmp/environment.yml" ]; then umask 0002 && /opt/conda/bin/conda env update -n base -f /tmp/conda-tmp/environment.yml; fi \
+    && rm -rf /tmp/conda-tmp
 
-# Copy files
-RUN mkdir requirements
+# [Optional] Uncomment to install a different version of Python than the default
+RUN conda install -y python=3.10 \
+    && pip install --no-cache-dir pipx \
+    && pipx reinstall-all
 
-COPY install_quarto.sh install_dependencies.sh requirements/
-RUN bash ./requirements/install_dependencies.sh
-RUN bash ./requirements/install_quarto.sh $QUARTO_VER
-
-# Install dependencies
-COPY requirements.txt install_requirements.sh requirements/
-RUN bash requirements/install_requirements.sh $ENV_NAME $PYTHON_VER
+# [Optional] Uncomment this section to install additional OS packages.
+# RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
+#     && apt-get -y install --no-install-recommends <your-package-list-here>
