--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,48 +1,31 @@
+// For format details, see https://aka.ms/devcontainer.json. For config options, see the
+// README at: https://github.com/devcontainers/templates/tree/main/src/miniconda
 {
-    "name": "${localEnv:PROJECT_A_NAME:reviewSite}",
-    "build": {
-        "dockerfile": "Dockerfile",
-        "args": {
-            "ENV_NAME": "${localEnv:PROJECT_A_NAME:reviewSite}",
-            "PYTHON_VER": "${localEnv:PYTHON_VER:3.12}"
-        }
-    },
+	"name": "Miniconda (Python 3)",
+	"build": { 
+		"context": "..",
+		"dockerfile": "Dockerfile"
+	},
     "customizations": {
-        "settings": {
-            "python.defaultInterpreterPath": "/opt/conda/envs/${localEnv:PROJECT_A_NAME:reviewSite}/bin/python3",
-            "python.selectInterpreter": "/opt/conda/envs/${localEnv:PROJECT_A_NAME:reviewSite}/bin/python3"
-        },
         "vscode": {
-            "extensions": [
-                // Documentation Extensions
-                "purocean.drawio-preview",
-                "redhat.vscode-yaml",
-                "yzhang.markdown-all-in-one",
-                // Docker Supporting Extensions
-                "ms-azuretools.vscode-docker",
-                "ms-vscode-remote.remote-containers",
-                // Python Extensions
-                "ms-python.python",
-                "ms-python.debugpy",
-                "batisteo.vscode-django",
-                // Formatting Extensions
-                "esbenp.prettier-vscode",
-                "mechatroner.rainbow-csv",
-                // Database Extensions
-                "qwtel.sqlite-viewer"
-            ]
+          "extensions": [
+            // Documentation Extensions
+            "purocean.drawio-preview",
+            "redhat.vscode-yaml",
+            "yzhang.markdown-all-in-one",
+            // Docker Supporting Extensions
+            "ms-azuretools.vscode-docker",
+            "ms-vscode-remote.remote-containers",
+            // Python Extensions
+            "ms-python.python",
+            "ms-python.debugpy",
+            "batisteo.vscode-django",
+            // Formatting Extensions
+            "esbenp.prettier-vscode",
+            "mechatroner.rainbow-csv",
+            // Database Extensions
+            "qwtel.sqlite-viewer"
+          ]
         }
-    },
-    // Optional, mount local volume:
-    // "mounts": [
-    //     "source=${localEnv:DATA_FOLDER},target=/home/csv,type=bind,consistency=cache"
-    // ],
-    "remoteEnv": {
-        "MY_VAR": "${localEnv:MY_VAR:test_var}"
-    },
-    "runArgs": [
-        "--env-file",
-        ".devcontainer/devcontainer.env"
-    ]
-    // "postCreateCommand": "python3 tests/test1.py"
+    }
 }
