Changed settings.py to use mysql container

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: supersecret
       MYSQL_DATABASE: reviewSite
+      MYSQL_USER: mysql
+      MYSQL_PASSWORD: mysql
 
     volumes:
       - ../..:/workspaces:cached
@@ -27,6 +29,8 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: supersecret
       MYSQL_DATABASE: reviewSite
+      MYSQL_USER: mysql
+      MYSQL_PASSWORD: mysql
 
     # Add "forwardPorts": ["5432"] to **devcontainer.json** to forward PostgreSQL locally.
     # (Adding the "ports" property to this file will not forward from a Codespace.)
