--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -12,5 +12,5 @@ RUN conda install -y python=3.10 \
     && pipx reinstall-all
 
 # [Optional] Uncomment this section to install additional OS packages.
-# RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-#     && apt-get -y install --no-install-recommends <your-package-list-here>
+RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
+    && apt-get -y install --no-install-recommends python3-dev python3-pip default-libmysqlclient-dev build-essential
