--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -23,6 +23,8 @@ services:
     restart: unless-stopped
     volumes:
       - mysql-data:/var/lib/mysql
+    ports:
+      - 3306:3306
     env_file:
       - .env
 
